# appimage-gnome-thumbnailer

./: .travis.yml  CMakeLists.txt  README.md
cmake/: cpack_debian.cmake  cpack_generic.cmake  cpack_rpm.cmake  libappimage_as_external_project.cmake
res/: CMakeLists.txt  appimage-gnome.thumbnailer.in
src/: CMakeLists.txt  appimage-gnome-thumbnailer.c  gnome-thumbnailer-skeleton.c
